Going for a major change in addproduct and category area for product surfing pupose

--- a/public/admin/stylesheet/style.css
+++ b/public/admin/stylesheet/style.css
@@ -106,3 +106,12 @@
   left: 0;
   z-index: 100;
 }
+
+.gcard2{
+  display: flex;
+}
+.gcard2 img{
+  width: 110px;
+  border-radius: 10px;
+  object-fit: cover;
+}
