--- a/public/assets/css/gasal.css
+++ b/public/assets/css/gasal.css
@@ -84,3 +84,50 @@
     background: linear-gradient(rgba(255, 0, 0, 0.244), rgba(0, 0, 0, 0.321));
 }
 
+.gcard{
+    display: flex;
+    border: 2px solid rgb(153, 187, 102);
+    border-radius: 10px;
+    padding: 10px 10px;
+    width: 100%;
+}
+.gcard img{
+    border-radius: 10px;
+    width: 80px;
+    height: 80px;
+    object-fit: cover;
+}
+.gcard .gcard-body{
+    padding: 3px 10px;
+    line-height: 20px;
+    width: 100%;
+}
+.gcard a{
+    width: 80px;
+    height: 30px;
+    border-radius: 60px;
+    right: 10;
+    bottom: 10;
+}
+
+.gcard2{
+    display: flex;
+}
+.gcard2 img{
+    width: 110px;
+    border-radius: 10px;
+    object-fit: cover;
+}
+
+.checkoutAddress{
+    border: 2px solid palegreen;
+    padding: 10px 10px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.activeaddress{
+    border: 3px solid dodgerblue;
+    padding: 10px 10px;
+    border-radius: 10px;
+}
