--- a/views/admin/categories.ejs
+++ b/views/admin/categories.ejs
@@ -2,6 +2,7 @@
 
     <div style="width: 100%;">
         <h3 class="headtext p-3"><i class="fa-solid fa-cog"></i> Category control</h3>
+        <h6 style="color: red;"><%= err?err:'' %></h6>
         <div class="category-wrapper">
             <div class="productsNav mt-3 mb-5">
                 <div class="searchBar">
