--- a/views/admin/head.ejs
+++ b/views/admin/head.ejs
@@ -21,6 +21,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="/admin/stylesheet/style.css">
         <link rel="stylesheet" href="/admin/stylesheet/category.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/habibmhamadi/multi-select-tag/dist/css/multi-select-tag.css">
+        <script src="https://cdn.jsdelivr.net/gh/habibmhamadi/multi-select-tag/dist/js/multi-select-tag.js"></script>
     <style>
         body {
             margin: 0;
