--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -57,17 +57,18 @@
                                                         </td>
                                                         <td class="quantity-col">
                                                             <div class="cart-product-quantity">
-                                                                <input type="number" class="form-control"
+                                                                <input type="number" class="mouse-only-number-input"
                                                                     value="<%= product.Quantity %>" min="1" max="10"
-                                                                    step="1" data-decimals="0"
+                                                                    step="1"
+                                                                    onkeydown="return false"
                                                                     onchange="updateQuantity('<%= product._id %>', this.value)"
-                                                                    required>
+                                                                    >
                                                             </div><!-- End .cart-product-quantity -->
                                                         </td>
                                                         <td class="total-col">$<%= product.Price * product.Quantity %>
                                                         </td>
                                                         <td class="remove-col"><a
-                                                                href="/removefromcartcart/<%= product._id %>"><button
+                                                                onclick="removeFromCart('<%= product.Productid %>')"><button
                                                                     class="btn-remove"><i
                                                                         class="icon-close"></i></button></a></td>
                                                     </tr>
@@ -159,7 +160,7 @@
                                                 <td>Total:</td>
                                                 <td>$<%= totalPrice.toFixed(2) %>
                                                 </td>
-                                         </tr><!-- End .summary-total -->
+                                            </tr><!-- End .summary-total -->
                                         </tbody>
                                     </table><!-- End .table table-summary -->
 
@@ -171,7 +172,7 @@
                                         SHOPPING</span><i class="icon-refresh"></i></a>
                             </aside><!-- End .col-lg-3 -->
                         </div><!-- End .row -->
-                        
+
                     </div><!-- End .container -->
                 </div><!-- End .cart -->
             </div><!-- End .page-content -->
@@ -280,6 +281,27 @@
             });
         }
 
+        function removeFromCart(productId) {
+            // AJAX request to update the quantity
+            const query = confirm('Are you sure you want to remove item from cart?');
+            if (query){
+                $.ajax({
+                type: 'GET',
+                url: `/removefromcart/${productId}`,
+                success: function (response) {
+                    console.log('Item Removed successfully:', response);
+                    // Update the total price and any other UI elements as needed
+                    // For simplicity, let's reload the page to update the UI after quantity change
+                    location.reload();
+                },
+                error: function (error) {
+                    console.error('Error removing cart item:', error);
+                    location.reload();
+                }
+            });
+            }
+            
+        }
     </script>
 
     <%- include('foot.ejs') %>
